# Infiniti

./: ABOUT.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml  codeql-analysis.yml  cpp-ci.yml  dependency-review.yml  go-ci.yml  java-ci.yml  javascript-ci.yml  python-ci.yml  rust-ci.yml
docs/: building.md  contributing.md  evaluation.md  nnue.md  search.md  uci.md  usage.md
nnue/: accumulator.cpp  accumulator.h  features_halfkp.cpp  features_halfkp.h  network.cpp  network.h  nnue.cpp  nnue.h  nnue_file.cpp  nnue_file.h
src/: bitboard.cpp  bitboard.h  eval.cpp  main.cpp  movegen.cpp  movegen.h  position.cpp  position.h  search.cpp  search.h  tt.h  types.h  uci.cpp  uci.h
